# axplat_crates

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
axhal_cpu/: Cargo.toml
axhal_cpu/src/: lib.rs  trap.rs
axhal_cpu/src/aarch64/: context.rs  mod.rs  trap.rs
axhal_cpu/src/riscv/: context.rs  mod.rs  trap.rs
axhal_cpu/src/x86_64/: context.rs  gdt.rs  trap.rs
axhal_plat/: Cargo.toml  README.md
axhal_plat/src/: console.rs  init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
axhal_plat_macros/: Cargo.toml
axhal_plat_macros/src/: lib.rs
axplat/: Cargo.toml  README.md
axplat-cli/: .gitignore  Cargo.toml  README.md  build.rs
axplat-cli/src/: add.rs  info.rs  main.rs  new.rs
axplat-cli/template/: Cargo.toml
axplat-cli/template/src/: console.rs  init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
axplat-macros/: Cargo.toml  README.md
axplat-macros/src/: lib.rs
axplat/src/: console.rs  init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
cargo-axplat/: Cargo.toml  README.md  build.rs
cargo-axplat/src/: add.rs  info.rs  main.rs  new.rs
cargo-axplat/template/: Cargo.toml  _Cargo.toml  axconfig.toml
cargo-axplat/template/src/: init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
examples/hello-kernel/: Cargo.toml  Makefile  README.md  build.rs  linker.lds.S
examples/hello-kernel/src/: main.rs
examples/irq-kernel/: Cargo.toml  Makefile  README.md  axconfig.toml  linker.lds.S
examples/irq-kernel/src/: irq.rs  main.rs
examples/smp-kernel/: Cargo.toml  Makefile  README.md  build.rs  linker.lds.S
examples/smp-kernel/src/: init.rs  irq.rs  main.rs  mp.rs
