[workspace]
resolver = "2"

members = [
    "axplat",
    "axplat-macros",
    "axplat-cli",
    "platforms/axplat-x86-pc",
    "platforms/axplat-aarch64-common",
    "platforms/axplat-aarch64-qemu-virt",
    "platforms/axplat-aarch64-raspi",
]

[workspace.package]
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "Su Mingxian <aarkegz@gmail.com>",
    "RobertYuan <634954435@qq.com>",
    "hky1999 <keyang.hu@qq.com>",
]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/axhal_crates"
repository = "https://github.com/arceos-org/axhal_crates"

[workspace.dependencies]
axcpu = { git = "https://github.com/arceos-org/axcpu.git" }
axplat = { version = "0.1.0", path = "./axplat" }
axplat-macros = { version = "0.1.0", path = "./axplat-macros" }
