[package]
name = "axhal_plat_macros"
version = "0.1.0"
description = "Unified operations for various hardware platforms"
documentation = "https://docs.rs/axhal_plat_macros"
keywords = ["arceos", "hal", "hardware-abstraction-layer", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
crate_interface = "0.1"

[lib]
proc-macro = true
