[package]
name = "axplat-cli"
version = "0.1.0"
description = "Manages hardware platform packages using `axhal_plat`"
documentation = "https://docs.rs/axplat-cli"
keywords = ["arceos", "hal", "hardware-abstraction-layer"]
categories = ["development-tools", "embedded", "hardware-support", "os"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
toml_edit = "0.22"
