[package]
name = "axplat"
version = "0.1.0"
description = "This crate provides a unified abstraction layer for diverse hardware platforms."
documentation = "https://docs.rs/axplat"
keywords = ["arceos", "os", "hal", "embedded"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
smp = ["kspin/smp"]
irq = ["dep:handler_table"]

[dependencies]
memory_addr = "0.4"
bitflags = "2.6"
crate_interface = "0.1"
handler_table = { version = "0.1.2", optional = true }
const-str = "0.6.2"
axplat-macros = { workspace = true }
kspin = "0.1"

[package.metadata.docs.rs]
all-features = true
