[package]
name = "cargo-axplat"
version = "0.1.0"
description = "Manages hardware platform packages using `axplat`"
keywords = ["arceos", "hal", "hardware-abstraction-layer"]
categories = ["development-tools", "embedded", "hardware-support", "os"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.15"
toml_edit = "0.22"
serde_json = "1.0"
